# rustwebscrapper

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: db.rs  main.rs  request.rs  structs.rs
