[package]
name = "csgostashweb_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
chrono = "0.4"
lazy_static = "1.4"
toml = "0.8.10"
serde = "1.0.196"

[dependencies.mongodb]
version = "2.8.1"
features = ["snappy-compression"]
